--- a/xUnitSpike.Services.IntegrationTests/packages.config
+++ b/xUnitSpike.Services.IntegrationTests/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoFixture" version="3.34.2" targetFramework="net452" />
   <package id="FluentAssertions" version="4.0.0" targetFramework="net452" />
   <package id="Unity" version="3.5.1404.0" targetFramework="net452" />
   <package id="xunit" version="2.1.0" targetFramework="net452" />
